tekton/base/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-build-push-image-listener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: tekton-pipelines.gregrobinson.ca
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: el-build-push-image-tekton-trigger-listener
            port:
              number: 8080
